Course Labs/Lab 05 - Exposing services with Ingress/SourceCode/bookstore-fullstack-on-kubernetes/K8s/bookstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: bookstore.minikube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: frontend
             port:
               number: 80
      - path: /books
        pathType: Prefix
        backend:
          service:
             name: backend-api
             port:
               number: 80
      - path: /categories
        pathType: Prefix
        backend:
          service:
             name: backend-api
             port:
               number: 80
